@@ -12,6 +12,11 @@
 #   ...
 # end</code></pre>
 #
+# The emails from CruiseControl.rb can have a lot of details about the build, or just a link to the build page in the dashboard.
+# Usually, you will want the latter. Set the dashboard URL in the [cruise]/config/site_config.rb as follows:
+#
+# <pre><code>Configuration.dashboard_url = 'http://your.host.name.com:3333'</pre></code>
+
 class EmailNotifier
   attr_accessor :emails
   
@@ -20,24 +25,22 @@ class EmailNotifier
   end
 
   def build_finished(build)
-    return if @emails.empty? or !build.failed?
-
-    email :deliver_build_failed, build
+    return if @emails.empty? or not build.failed?
+    email :deliver_build_report, build, "#{build.project.name} build #{build.label} failed", "The build failed."
   end
 
   def build_fixed(build, previous_build)
     return if @emails.empty?
-    
-    email :deliver_build_fixed, build
+    email :deliver_build_report, build, "#{build.project.name} build #{build.label} fixed", "The build has been fixed."
   end
   
   private
   
-  def email(message, build)
-    BuildMailer.send(message, build, @emails)
-    CruiseControl::Log.event("Sent e-mail to #{@emails.size == 1 ? "1 person" : "#{@emails.size} people"}", :info)
-  rescue
-    settings = ActionMailer::Base.smtp_settings.map {|k,v| "  #{k.inspect} = #{v.inspect}"}.join("\n")
+  def email(template, build, *args)
+    BuildMailer.send(template, build, @emails, *args)
+    CruiseControl::Log.event("Sent e-mail to #{@emails.size == 1 ? "1 person" : "#{@emails.size} people"}", :debug)
+  rescue => e
+    settings = ActionMailer::Base.smtp_settings.map { |k,v| "  #{k.inspect} = #{v.inspect}" }.join("\n")
     CruiseControl::Log.event("Error sending e-mail - current server settings are :\n#{settings}", :error)
     raise
   end
